Format environmental and spectral data
Added formatting scripts for the environmental and spectral features and creating the prediction tiles.

--- a/environmentalData/CreateComposite10mArcticDEM.ipynb
+++ b/environmentalData/CreateComposite10mArcticDEM.ipynb
@@ -108,7 +108,7 @@
     "    tile_list = []\n",
     "    for file in os.listdir(tile_folder):\n",
     "        if file.endswith('tif'):\n",
-    "            tile_list = tile_list + [os.path.join(tile_folder, file)]\n",
+    "            tile_list.append(os.path.join(tile_folder, file))\n",
     "    print('Process will form composite from {0} raster tiles...'.format(len(tile_list)))\n",
     "    # Define projection for all raster tiles as National Snow and Ice Data Center Sea Ice Polar Stereographic North (WGS84)\n",
     "    polar_stereographic = arcpy.SpatialReference(3413) #WGS 1984 NSIDC Sea Ice Polar Stereographic North\n",
@@ -154,9 +154,9 @@
     "    arcpy.CopyRaster_management(integer_raster, bristol_bay_dem, '', '', '-32768', 'NONE', 'NONE', '16_BIT_SIGNED', 'NONE', 'NONE', 'TIFF', 'NONE')\n",
     "    print('Created output Bristol Bay DEM...')\n",
     "    # Delete intermediate dataset\n",
-    "    #arcpy.Delete_management(mask_feature)\n",
-    "    #out_process = arcpy.Delete_management(usgs_60m_dem_resample)\n",
-    "    #return out_process"
+    "    arcpy.Delete_management(mask_feature)\n",
+    "    out_process = arcpy.Delete_management(usgs_60m_dem_resample)\n",
+    "    return out_process"
    ]
   },
   {
@@ -177,194 +177,6 @@
     "\n",
     "# Process the create polygon function with the point array\n",
     "arcpy_geoprocessing(create_composite_dem, **create_dem_kwargs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mosaic_location, mosaic_name = os.path.split(arctic_dem_composite)\n",
-    "mask_feature = 'mask_feature'\n",
-    "arctic_dem_composite_akalb = os.path.join(mosaic_location, 'arctic_10m_DEM_composite_AKALB.tif')\n",
-    "usgs_60m_dem_resample = os.path.join(os.path.split(usgs_60m_dem)[0], 'usgs_60m_dem_resample.tif')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Process will form composite from 56 raster tiles...\n"
-     ]
-    }
-   ],
-   "source": [
-    "tile_list = []\n",
-    "for file in os.listdir(arcticDEM_tile_folder):\n",
-    "    if file.endswith('tif'):\n",
-    "        tile_list = tile_list + [os.path.join(arcticDEM_tile_folder, file)]\n",
-    "print('Process will form composite from {0} raster tiles...'.format(len(tile_list)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "polar_stereographic = arcpy.SpatialReference(3413) #WGS 1984 NSIDC Sea Ice Polar Stereographic North"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arcpy.env.snapRaster = usgs_60m_dem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Result 'E:\\\\VegetationEcology\\\\BristolBay_Vegetation\\\\Project_GIS\\\\Data_Input\\\\source_data\\\\elevation\\\\arctic_10m_DEM\\\\raster_composite\\\\arctic_10m_DEM_composite_AKALB.tif'>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "akalb = arcpy.SpatialReference(3338) #NAD 1983 Alaska Albers\n",
-    "transform_method = 'WGS_1984_(ITRF00)_To_NAD_1983'\n",
-    "arcpy.ProjectRaster_management(arctic_dem_composite, arctic_dem_composite_akalb, akalb, 'BILINEAR', '10', transform_method)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Result 'E:/VegetationEcology/BristolBay_Vegetation/Project_GIS\\\\BristolBay_Vegetation.gdb\\\\mask_feature'>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arcpy.Clip_analysis(hydrographic_area, alaska_boundary, mask_feature)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Result 'E:\\\\VegetationEcology\\\\BristolBay_Vegetation\\\\Project_GIS\\\\Data_Input\\\\source_data\\\\elevation\\\\USGS3DEP_60m_DEM\\\\usgs_60m_dem_resample.tif'>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "usgs_60m_extract = ExtractByMask(usgs_60m_dem, mask_feature)\n",
-    "arcpy.Resample_management(usgs_60m_extract, usgs_60m_dem_resample, '10 10', 'BILINEAR')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filled NoData cells in Arctic DEM with downsampled USGS DEM...\n"
-     ]
-    }
-   ],
-   "source": [
-    "filled_raster = Con(IsNull(arctic_dem_composite_akalb), usgs_60m_dem_resample, arctic_dem_composite_akalb)\n",
-    "print('Filled NoData cells in Arctic DEM with downsampled USGS DEM...')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracted DEM to mask feature class...\n"
-     ]
-    }
-   ],
-   "source": [
-    "extract_raster = ExtractByMask(filled_raster, mask_feature)\n",
-    "print('Extracted DEM to mask feature class...')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted floating values to integers...\n"
-     ]
-    }
-   ],
-   "source": [
-    "integer_raster = Int(extract_raster + 0.5)\n",
-    "print('Converted floating values to integers...')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Result 'E:\\\\VegetationEcology\\\\BristolBay_Vegetation\\\\Project_GIS\\\\Data_Input\\\\predictor_env\\\\bristolBay_10m_DEM\\\\bristolBay_10m_DEM.tif'>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arcpy.CopyRaster_management(integer_raster, bristol_bay_dem, '', '', '-32768', 'NONE', 'NONE', '16_BIT_SIGNED', 'NONE', 'NONE', 'TIFF', 'NONE')"
    ]
   },
   {
