--- a/geospatialProcessing/CreateModelingAreas.ipynb
+++ b/geospatialProcessing/CreateModelingAreas.ipynb
@@ -42,25 +42,26 @@
    "source": [
     "# Import packages\n",
     "import arcpy\n",
+    "import datetime\n",
     "import os\n",
+    "import time\n",
     "\n",
     "# Set overwrite option\n",
     "arcpy.env.overwriteOutput = True\n",
     "\n",
     "# Set root directory\n",
-    "drive = 'E:/'\n",
-    "root_directory = os.path.join(drive, 'VegetationEcology/BristolBay_Vegetation/Project_GIS')\n",
+    "drive = 'F:/'\n",
+    "root_directory = os.path.join(drive, 'ACCS_Work/Projects/VegetationEcology/BristolBay_Vegetation/Project_GIS')\n",
     "\n",
     "# Set arcpy working environment\n",
     "arcpy.env.workspace = os.path.join(root_directory, 'BristolBay_Vegetation.gdb')\n",
     "\n",
     "# Define script paths\n",
-    "script_directory = os.path.join(drive, 'Repositories/southwest-alaska-moose/modules')\n",
+    "script_directory = os.path.join(drive, 'ACCS_Work/Repositories/southwest-alaska-moose/modules')\n",
     "arcpy_geoprocessing_script = os.path.join(script_directory, 'arcpy_geoprocessing.py')\n",
     "\n",
     "# Define input array\n",
-    "point_array = [[-160.00218, 61.52927],\n",
-    "               [-152.79699, 61.07407],\n",
+    "point_array = [[-152.79699, 61.55473],\n",
     "               [-152.70467, 58.66074],\n",
     "               [-157.69984, 56.33955],\n",
     "               [-159.49354, 56.97233],\n",
@@ -122,6 +123,8 @@
     "            'projected_reference' -- the ESRI reference number for the projected reference of the output datasets\n",
     "            'transform_method' -- required if the geographic and projected references are in different datums\n",
     "    \"\"\"\n",
+    "    # Start timing function execution\n",
+    "    start = time.time()\n",
     "    # Parse key word argument inputs\n",
     "    point_array = kwargs['point_array']\n",
     "    alaska_boundary = kwargs['input_array'][0]\n",
@@ -134,6 +137,7 @@
     "    # Define intermediate datasets\n",
     "    initial_area = os.path.join(output_path, 'modelArea_initial')\n",
     "    # Create a new polygon feature class\n",
+    "    print('Inserting vertices to new feature class...')\n",
     "    arcpy.CreateFeatureclass_management(output_path, 'modelArea_initial', 'POLYGON')\n",
     "    # Add projection to new feature class\n",
     "    arcpy.DefineProjection_management(initial_area, geographic_reference)\n",
@@ -148,9 +152,19 @@
     "    # Project polygon\n",
     "    arcpy.Project_management(initial_area, output_full, projected_reference, transform_method)\n",
     "    # Clip the polygon to the Alaska coastline\n",
+    "    print('Clipping model area to Alaska coastline...')\n",
     "    arcpy.Clip_analysis(output_full, alaska_boundary, output_clipped)\n",
     "    # Delete intermediate dataset\n",
-    "    out_process = arcpy.Delete_management(initial_area)\n",
+    "    arcpy.Delete_management(initial_area)\n",
+    "    # End timing function execution and calculate elapsed time\n",
+    "    end = time.time()\n",
+    "    elapsed = int(end - start)\n",
+    "    success_time = datetime.datetime.now()\n",
+    "    # Report process success\n",
+    "    print('Successfully created modeling areas...')\n",
+    "    print('----------')\n",
+    "    out_process = 'Succeeded at {0} (Elapsed time: {1})'.format(success_time.strftime(\"%Y-%m-%d %H:%M\"),\n",
+    "                                                                datetime.timedelta(seconds=elapsed))\n",
     "    return out_process"
    ]
   },
@@ -165,7 +179,11 @@
      "text": [
       "SouthwestAlaska_ModelArea_Full already exists and will be overwritten.\n",
       "SouthwestAlaska_ModelArea_Clipped already exists and will be overwritten.\n",
-      "Succeeded at Thursday, March 21, 2019 10:33:41 AM (Elapsed Time: 0.30 seconds)\n"
+      "Inserting vertices to new feature class...\n",
+      "Clipping model area to Alaska coastline...\n",
+      "Successfully created modeling areas...\n",
+      "----------\n",
+      "Succeeded at 2019-04-02 13:10 (Elapsed time: 0:00:13)\n"
      ]
     }
    ],
@@ -209,6 +227,8 @@
     "            'output_array' -- the output should be an array with a feature class for selected 8 digit hydrologic units\n",
     "            'projected_reference' -- the ESRI reference number for the projected reference of the output datasets\n",
     "    \"\"\"\n",
+    "    # Start timing function execution\n",
+    "    start = time.time()\n",
     "    # Parse key word argument inputs\n",
     "    model_area = kwargs['input_array'][0]\n",
     "    subbasins = kwargs['input_array'][1]\n",
@@ -217,12 +237,23 @@
     "    # Define intermediate datasets\n",
     "    hydrographic_area_initial = 'hydrographicArea_initial'\n",
     "    # Select subbasins that intersect the model area\n",
+    "    print('Selecting subbasins in hydrographic area...')\n",
     "    subbasins_select = arcpy.SelectLayerByLocation_management(subbasins, 'INTERSECT', model_area, '', 'NEW_SELECTION', 'NOT_INVERT')\n",
     "    # Project polygon\n",
+    "    print('Copying subbasins to new feature class...')\n",
     "    arcpy.CopyFeatures_management(subbasins_select, hydrographic_area_initial)\n",
     "    arcpy.Project_management(hydrographic_area_initial, hydrographic_area, projected_reference)\n",
     "    # Delete intermediate dataset\n",
-    "    out_process = arcpy.Delete_management(hydrographic_area_initial)\n",
+    "    arcpy.Delete_management(hydrographic_area_initial)\n",
+    "    # End timing function execution and calculate elapsed time\n",
+    "    end = time.time()\n",
+    "    elapsed = int(end - start)\n",
+    "    success_time = datetime.datetime.now()\n",
+    "    # Report process success\n",
+    "    print('Successfully created hydrographic area of influence...')\n",
+    "    print('----------')\n",
+    "    out_process = 'Succeeded at {0} (Elapsed time: {1})'.format(success_time.strftime(\"%Y-%m-%d %H:%M\"),\n",
+    "                                                                datetime.timedelta(seconds=elapsed))\n",
     "    return out_process"
    ]
   },
@@ -236,7 +267,11 @@
      "output_type": "stream",
      "text": [
       "SouthwestAlaska_HydrographicArea already exists and will be overwritten.\n",
-      "Succeeded at Thursday, March 21, 2019 10:33:50 AM (Elapsed Time: 0.65 seconds)\n"
+      "Selecting subbasins in hydrographic area...\n",
+      "Copying subbasins to new feature class...\n",
+      "Successfully created hydrographic area of influence...\n",
+      "----------\n",
+      "Succeeded at 2019-04-02 13:10 (Elapsed time: 0:00:04)\n"
      ]
     }
    ],
