--- a/geospatialProcessing/CreateStudyArea.ipynb
+++ b/geospatialProcessing/CreateStudyArea.ipynb
@@ -48,8 +48,8 @@
     "arcpy.env.overwriteOutput = True\n",
     "\n",
     "# Set root directory\n",
-    "drive = 'E:/'\n",
-    "root_directory = os.path.join(drive, 'VegetationEcology/BristolBay_Vegetation/Project_GIS')\n",
+    "drive = 'F:/'\n",
+    "root_directory = os.path.join(drive, 'ACCS_Work/Projects/VegetationEcology/BristolBay_Vegetation/Project_GIS')\n",
     "\n",
     "# Set arcpy working environment\n",
     "arcpy.env.workspace = os.path.join(root_directory, 'BristolBay_Vegetation.gdb')\n",
