Update prediction scripts

--- a/statistics_PathSelection/HabitatTrainTest.ipynb
+++ b/statistics_PathSelection/HabitatTrainTest.ipynb
@@ -8,12 +8,12 @@
     "\n",
     "**Written by Timm Nawrocki, Amanda Droghini**\n",
     "\n",
-    "*Last updated Monday, March 29, 2021.*"
+    "*Last updated Wednesday, June 9, 2021.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "# ---------------------------------------------------------------------------\n",
     "# Habitat Train and Test\n",
     "# Author: Timm Nawrocki, Amanda Droghini Alaska Center for Conservation Science\n",
-    "# Created on: 2021-03-29\n",
+    "# Created on: 2021-06-09\n",
     "# Usage: Must be executed as a Jupyter Notebook in an Anaconda 3 installation.\n",
     "# Description: \"Habitat Train and Test\" trains a random forest model (i.e., path selection function) to predict habitat\n",
     "# from path covariate means. A threshold for avoidance/selection conversion is selected empirically. All model performance\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +65,7 @@
     "# Import modules for model selection, cross validation, random forest, and performance from Scikit Learn\n",
     "from sklearn.utils import shuffle\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.model_selection import cross_val_predict\n",
     "from sklearn.model_selection import cross_val_score\n",
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,18 +95,19 @@
     "data_input = os.path.join(root_folder,\n",
     "                          'Data_Input/paths')\n",
     "data_output = os.path.join(root_folder,\n",
-    "                           'Data_Output/model_results')"
+    "                           'Data_Output/model_results/round_20210604')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define variable sets\n",
-    "predictor_all = ['elevation_mean', 'roughness_mean', 'forest_edge_mean', 'tundra_edge_mean', 'alnus_mean', 'betshr_mean',\n",
-    "                 'dectre_mean', 'erivag_mean', 'picgla_mean', 'picmar_mean', 'salshr_mean', 'wetsed_mean']\n",
+    "predictor_all = ['elevation', 'roughness', 'forest_edge', 'tundra_edge', 'alnus', 'betshr',\n",
+    "                 'dectre', 'dryas', 'empnig', 'erivag', 'picgla', 'picmar', 'rhoshr',\n",
+    "                 'salshr', 'sphagn', 'vaculi', 'vacvit', 'wetsed']\n",
     "response = ['response']\n",
     "retain_variables = ['mooseYear_id', 'fullPath_id', 'calfStatus']\n",
     "all_variables = retain_variables + predictor_all + response\n",
@@ -119,45 +121,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a classifier\n",
-    "classifier = RandomForestClassifier(n_estimators = 1000,\n",
+    "classifier = ExtraTreesClassifier(n_estimators = 1000,\n",
     "                                   criterion = 'gini',\n",
     "                                   max_depth = None,\n",
     "                                   min_samples_split = 2,\n",
     "                                   min_samples_leaf = 1,\n",
     "                                   min_weight_fraction_leaf = 0,\n",
-    "                                   max_features = 3,\n",
-    "                                   bootstrap = True,\n",
+    "                                   max_features = None,\n",
+    "                                   bootstrap = False,\n",
     "                                   oob_score = False,\n",
     "                                   n_jobs = 2,\n",
-    "                                   random_state = 314)"
+    "                                   random_state = 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define input file\n",
-    "input_file = os.path.join(data_input, 'allPaths_forModel_meanCovariates.csv')\n",
+    "input_file = os.path.join(data_input, 'allPaths_meanCovariates_forModelRun.csv')\n",
     "# Define output folder\n",
-    "output_folder = os.path.join(data_output, 'NoCalf_RF')\n",
+    "output_folder = os.path.join(data_output, 'Calf_RF')\n",
     "# Define output report\n",
-    "output_report_name = 'report-moose-nocalf.html'\n",
+    "output_report_name = 'report-moose-calf.html'\n",
     "# Define species, genera, or aggregate name\n",
-    "taxon_name = 'Moose without Calves'\n",
+    "taxon_name = 'Moose with Calves'\n",
     "# Define calf status\n",
-    "calf_status = 0"
+    "calf_status = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,20 +384,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create data frame of input data\n",
     "data_all = pd.read_csv(input_file)\n",
     "input_data = data_all[data_all['calfStatus'] == calf_status].copy()\n",
+    "# Rename covariates to match prediction grids\n",
+    "input_data = input_data.rename(columns={'elevation_mean': 'elevation',\n",
+    "                                        'roughness_mean': 'roughness',\n",
+    "                                        'forest_edge_mean': 'forest_edge',\n",
+    "                                        'tundra_edge_mean': 'tundra_edge',\n",
+    "                                        'alnus_mean': 'alnus',\n",
+    "                                        'betshr_mean': 'betshr',\n",
+    "                                        'dectre_mean': 'dectre',\n",
+    "                                        'dryas_mean': 'dryas',\n",
+    "                                        'empnig_mean': 'empnig',\n",
+    "                                        'erivag_mean': 'erivag',\n",
+    "                                        'picgla_mean': 'picgla',\n",
+    "                                        'picmar_mean': 'picmar',\n",
+    "                                        'rhoshr_mean': 'rhoshr',\n",
+    "                                        'salshr_mean': 'salshr',\n",
+    "                                        'sphagn_mean': 'sphagn',\n",
+    "                                        'vaculi_mean': 'vaculi',\n",
+    "                                        'vacvit_mean': 'vacvit',\n",
+    "                                        'wetsed_mean': 'wetsed'})\n",
     "# Shuffle data\n",
-    "input_data = shuffle(input_data, random_state=21)"
+    "input_data = shuffle(input_data, random_state = 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,18 +448,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define 5-fold cross validation split methods\n",
-    "outer_cv_splits = StratifiedKFold(n_splits = 5, shuffle = True, random_state = 314)\n",
+    "outer_cv_splits = StratifiedKFold(n_splits = 5, shuffle = True, random_state = 5)\n",
     "inner_cv_splits = StratifiedKFold(n_splits = 5, shuffle = False, random_state = None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,9 +516,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conducting outer cross-validation iteration 1 of 5...\n",
+      "\tOptimizing classification threshold...\n",
+      "\tCompleted at 2021-06-09 10:34 (Elapsed time: 0:00:06)\n",
+      "\t----------\n",
+      "\tTraining classifier...\n",
+      "\tCompleted at 2021-06-09 10:34 (Elapsed time: 0:00:00)\n",
+      "\t----------\n",
+      "\tPredicting outer cross-validation test data...\n",
+      "\tCompleted at 2021-06-09 10:34 (Elapsed time: 0:00:00)\n",
+      "\t----------\n",
+      "Conducting outer cross-validation iteration 2 of 5...\n",
+      "\tOptimizing classification threshold...\n",
+      "\tCompleted at 2021-06-09 10:34 (Elapsed time: 0:00:06)\n",
+      "\t----------\n",
+      "\tTraining classifier...\n",
+      "\tCompleted at 2021-06-09 10:34 (Elapsed time: 0:00:00)\n",
+      "\t----------\n",
+      "\tPredicting outer cross-validation test data...\n",
+      "\tCompleted at 2021-06-09 10:34 (Elapsed time: 0:00:00)\n",
+      "\t----------\n",
+      "Conducting outer cross-validation iteration 3 of 5...\n",
+      "\tOptimizing classification threshold...\n",
+      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:06)\n",
+      "\t----------\n",
+      "\tTraining classifier...\n",
+      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:01)\n",
+      "\t----------\n",
+      "\tPredicting outer cross-validation test data...\n",
+      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:00)\n",
+      "\t----------\n",
+      "Conducting outer cross-validation iteration 4 of 5...\n",
+      "\tOptimizing classification threshold...\n",
+      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:06)\n",
+      "\t----------\n",
+      "\tTraining classifier...\n",
+      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:00)\n",
+      "\t----------\n",
+      "\tPredicting outer cross-validation test data...\n",
+      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:00)\n",
+      "\t----------\n",
+      "Conducting outer cross-validation iteration 5 of 5...\n",
+      "\tOptimizing classification threshold...\n",
+      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:06)\n",
+      "\t----------\n",
+      "\tTraining classifier...\n",
+      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:00)\n",
+      "\t----------\n",
+      "\tPredicting outer cross-validation test data...\n",
+      "\tCompleted at 2021-06-09 10:35 (Elapsed time: 0:00:00)\n",
+      "\t----------\n"
+     ]
+    }
+   ],
    "source": [
     "#### MODEL TRAIN AND TEST ITERATIONS WITH HYPERPARAMETER AND THRESHOLD OPTIMIZATION IN NESTED CROSS-VALIDATION\n",
     "####____________________________________________________\n",
@@ -639,18 +717,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "539\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(outer_results))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final AUC = 0.8386505622657225\n",
+      "Final Accuracy = 0.75139146567718\n"
+     ]
+    }
+   ],
    "source": [
     "# Partition output results to presence-absence observed and predicted\n",
     "y_classify_observed = outer_results[response[0]].astype('int32')\n",
@@ -667,13 +762,13 @@
     "sensitivity = true_positive / (true_positive + false_negative)\n",
     "specificity = true_negative / (true_negative + false_positive)\n",
     "# Calculate AUC score\n",
-    "auc = roc_auc_score(y_classify_observed, y_classify_probability)\n",
+    "fin_auc = roc_auc_score(y_classify_observed, y_classify_probability)\n",
     "# Calculate overall accuracy\n",
-    "accuracy = (true_negative + true_positive) / (true_negative + false_positive + false_negative + true_positive)\n",
+    "fin_accuracy = (true_negative + true_positive) / (true_negative + false_positive + false_negative + true_positive)\n",
     "\n",
     "# Print performance results\n",
-    "print(f'Final AUC = {auc}')\n",
-    "print(f'Final Accuracy = {accuracy}')"
+    "print(f'Final AUC = {fin_auc}')\n",
+    "print(f'Final Accuracy = {fin_accuracy}')"
    ]
   },
   {
@@ -685,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,6 +871,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8423157017909204\n",
+      "0.7755102040816326\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(auc)\n",
+    "print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "539\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(inner_results))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -784,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,9 +938,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-12-74624d887f02>:6: DeprecationWarning: `np.bool` is a deprecated alias for the builtin `bool`. To silence this warning, use `bool` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.bool_` here.\n",
+      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+      "  mask = np.zeros_like(correlation, dtype=np.bool)\n"
+     ]
+    }
+   ],
    "source": [
     "# Export a Pearson Correlation plot for the predictor variables\n",
     "plotVariableCorrelation(input_data[predictor_all], variable_correlation)"
@@ -817,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,8 +983,8 @@
     "text_file.write(f\"<h2>Composite Model Performance</h2>\\n\")\n",
     "text_file.write(f\"<p>Model performance was measured by calculating R squared, mean absolute error, and root mean squared error for the composite prediction across five independent cross validation folds. Within each cross validation fold, the Bayesian Optimization and threshold calculation were nested with 5-fold cross validation. Nested cross-validation maintained the independence of the test partition through multiple rounds of cross-validated model optimization. Additionally, the performance of the absence class is reported as an area under the receiver operating characteristic curve (AUC) and overall accuracy, where specificity and sensitivity are as close to equal as possible (i.e, the model performs equally well at predicting absences and presences). All performance results are reported from the merged results of all cross-validation runs (i.e., the performance is based on inclusion of each sample in the test set once).</p>\\n\")\n",
     "text_file.write(f\"<h3>Overall Performance</h3>\\n\")\n",
-    "text_file.write(f\"<p>AUC = \" + str(np.round(auc, 2)) + \"</p>\\n\")\n",
-    "text_file.write(f\"<p>Presence-Absence Accuracy = \" + str(np.round(accuracy, 2)) + \"</p>\\n\")\n",
+    "text_file.write(f\"<p>AUC = \" + str(np.round(fin_auc, 2)) + \"</p>\\n\")\n",
+    "text_file.write(f\"<p>Presence-Absence Accuracy = \" + str(np.round(fin_accuracy, 2)) + \"</p>\\n\")\n",
     "text_file.write(f\"<h3>Classifier Importances</h3>\\n\")\n",
     "text_file.write(f\"<p>The Variable Importance plot for the classifier is shown below:</p>\\n\")\n",
     "text_file.write(f\"<a target='_blank' href='plots\\\\importance_classifier.png'><img style='display:inline-block;max-width:1000px;width:100%;' src='plots\\\\importance_classifier.png'></a>\\n\")\n",
@@ -858,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +1033,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
